fix: adjust behavior of overflow

--- a/src/App.css
+++ b/src/App.css
@@ -447,6 +447,13 @@ textarea {
 
 .App {
   height: 100vh;
+  overflow: hidden;
+}
+
+.content {
+  height: 100vh;
+  overflow: scroll;
+  background-color: #008059;
 }
 
 * {
